feat: P4ADEV-1659 wf treasury opi ingestion error management (#53)
Co-authored-by: serdimic <sergio.dimichele@eng.it>
Co-authored-by: antonioT90 <34568575+antonioT90@users.noreply.github.com>