@@ -5,24 +5,27 @@ import it.gov.pagopa.payhub.activities.dao.TreasuryDao;
 import it.gov.pagopa.payhub.activities.dto.IngestionFlowFileDTO;
 import it.gov.pagopa.payhub.activities.dto.treasury.TreasuryIufResult;
 import it.gov.pagopa.payhub.activities.enums.IngestionFlowFileType;
+import it.gov.pagopa.payhub.activities.service.ingestionflow.IngestionFlowFileArchiverService;
 import it.gov.pagopa.payhub.activities.service.ingestionflow.IngestionFlowFileRetrieverService;
 import it.gov.pagopa.payhub.activities.service.treasury.*;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.io.TempDir;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class TreasuryOpiIngestionActivityTest {
@@ -41,14 +44,20 @@ class TreasuryOpiIngestionActivityTest {
   private TreasuryOpiParserService treasuryOpiParserServiceMock;
   @Mock
   private TreasuryOpiIngestionActivity treasuryOpiIngestionActivityMock;
+  @Mock
+  private IngestionFlowFileArchiverService ingestionFlowFileArchiverServiceMock;
 
+  @TempDir
+  Path workingDir;
 
   @BeforeEach
   void setUp() {
     treasuryOpiIngestionActivityMock = new TreasuryOpiIngestionActivityImpl(
             ingestionFlowFileDaoMock,
             ingestionFlowFileRetrieverServiceMock,
-            treasuryOpiParserServiceMock
+            treasuryOpiParserServiceMock,
+            ingestionFlowFileArchiverServiceMock,
+            "archiveDirectory"
     );
   }
 
@@ -64,19 +73,22 @@ class TreasuryOpiIngestionActivityTest {
   void givenValidIngestionFlowWhenProcessFileThenOk() throws IOException {
     // Given
     Long ingestionFlowFileId = 1L;
-    IngestionFlowFileDTO ingestionFlowFileDTO = new IngestionFlowFileDTO();
-    ingestionFlowFileDTO.setFlowFileType(IngestionFlowFileType.OPI);
-    ingestionFlowFileDTO.setFilePathName("/test/path");
-    ingestionFlowFileDTO.setFileName("testFile.zip");
+    IngestionFlowFileDTO ingestionFlowFileDTO = IngestionFlowFileDTO.builder()
+            .ingestionFlowFileId(ingestionFlowFileId)
+            .flowFileType(IngestionFlowFileType.OPI)
+            .filePathName(workingDir.toString())
+            .fileName("testFile.zip")
+            .build();
 
-    Path mockPath = mock(Path.class);
-    List<Path> paths = List.of(mockPath);
+    Path filePath = Files.createFile(Path.of(ingestionFlowFileDTO.getFilePathName()).resolve(ingestionFlowFileDTO.getFileName()));
+    List<Path> mockedListPath = List.of(filePath);
 
     Mockito.when(ingestionFlowFileDaoMock.findById(ingestionFlowFileId)).thenReturn(Optional.of(ingestionFlowFileDTO));
-    Mockito.when(ingestionFlowFileRetrieverServiceMock.retrieveAndUnzipFile(Path.of("/test/path"), "testFile.zip"))
-            .thenReturn(paths);
-    Mockito.when(treasuryOpiParserServiceMock.parseData(mockPath, ingestionFlowFileDTO,  paths.size()))
-            .thenReturn(new TreasuryIufResult(Collections.singletonList("IUF123"), true));
+    doReturn(mockedListPath).when(ingestionFlowFileRetrieverServiceMock)
+            .retrieveAndUnzipFile(Path.of(ingestionFlowFileDTO.getFilePathName()), ingestionFlowFileDTO.getFileName());
+
+    Mockito.when(treasuryOpiParserServiceMock.parseData(filePath, ingestionFlowFileDTO,  mockedListPath.size()))
+            .thenReturn(new TreasuryIufResult(Collections.singletonList("IUF123"), true, null));
 
     // When
     TreasuryIufResult result = treasuryOpiIngestionActivityMock.processFile(ingestionFlowFileId);
@@ -85,10 +97,10 @@ class TreasuryOpiIngestionActivityTest {
     Assertions.assertNotNull(result);
     Assertions.assertTrue(result.isSuccess());
     Assertions.assertEquals(1, result.getIufs().size());
-    Assertions.assertEquals("IUF123", result.getIufs().get(0));
+    Assertions.assertEquals("IUF123", result.getIufs().getFirst());
+    Mockito.verify(ingestionFlowFileArchiverServiceMock, Mockito.times(1))
+            .archive(mockedListPath, Path.of(ingestionFlowFileDTO.getFilePathName(),"/archiveDirectory/"));
   }
-
-
   @Test
   void givenIngestionFlowNotFoundWhenProcessFileThenNoSuccess() {
     //given
@@ -119,5 +131,53 @@ class TreasuryOpiIngestionActivityTest {
     Assertions.assertEquals(0, result.getIufs().size());
     Mockito.verify(ingestionFlowFileDaoMock, Mockito.times(1)).findById(INVALID_INGESTION_FLOW_ID);
     Mockito.verifyNoInteractions(treasuryDaoMock, ingestionFlowFileRetrieverServiceMock, treasuryUnmarshallerServiceMock, treasuryMapperServiceMock);
+  }
+
+
+  @Test
+  void givenWrongTypeIngestionFlowFileWhenProcessFileThenFails() {
+    // Given
+    long ingestionFlowFileId = 123L;
+    IngestionFlowFileDTO mockFlowDTO = IngestionFlowFileDTO.builder()
+            .ingestionFlowFileId(ingestionFlowFileId)
+            .flowFileType(INVALID_INGESTION_FLOW_TYPE)
+            .build();
+
+    when(ingestionFlowFileDaoMock.findById(ingestionFlowFileId)).thenReturn(Optional.of(mockFlowDTO));
+    // When
+    TreasuryIufResult result = treasuryOpiIngestionActivityMock.processFile(ingestionFlowFileId);
+
+    // Then
+    assertFalse(result.isSuccess());
+  }
+
+  @Test
+  void givenIOExceptionWhenProcessFileThenFails() throws IOException {
+    // Given
+    Long ingestionFlowFileId = 1L;
+    IngestionFlowFileDTO ingestionFlowFileDTO = IngestionFlowFileDTO.builder()
+            .ingestionFlowFileId(ingestionFlowFileId)
+            .flowFileType(IngestionFlowFileType.OPI)
+            .filePathName(workingDir.toString())
+            .fileName("testFile.zip")
+            .build();
+    Path filePath = Files.createFile(Path.of(ingestionFlowFileDTO.getFilePathName()).resolve(ingestionFlowFileDTO.getFileName()));
+    List<Path> mockedListPath = List.of(filePath);
+
+    TreasuryIufResult expected =
+            new TreasuryIufResult(Collections.emptyList(), false, "error occured");
+
+    when(ingestionFlowFileDaoMock.findById(ingestionFlowFileId)).thenReturn(Optional.of(ingestionFlowFileDTO));
+    doReturn(mockedListPath).when(ingestionFlowFileRetrieverServiceMock)
+            .retrieveAndUnzipFile(Path.of(ingestionFlowFileDTO.getFilePathName()), ingestionFlowFileDTO.getFileName());
+
+    doThrow(new IOException("error occured")).when(ingestionFlowFileArchiverServiceMock)
+            .archive(mockedListPath, Path.of(ingestionFlowFileDTO.getFilePathName(), "/archiveDirectory/"));
+
+    // When
+    TreasuryIufResult result = treasuryOpiIngestionActivityMock.processFile(ingestionFlowFileId);
+
+    // Then
+    assertEquals(expected, result);
   }
 }
